Remove support for GCC 7 and 8
- remove GCC 8.1 from Windows workflow
- remove GCC 7.5 and GCC 8.4 from Ubuntu/MacOS workflow
- remove GCC workaround from stdlib_string_type
- move GCC <9 from supported to failing compilers
- create error in CMake for too old GCC version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ add_subdirectory(config)
 
 # --- compiler options
 if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
+  if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 9.0)
+    message(FATAL_ERROR "GCC Version 9 or newer required")
+  endif()
   add_compile_options(-fimplicit-none)
   add_compile_options(-ffree-line-length-132)
   add_compile_options(-Wall)
@@ -27,11 +30,7 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
   if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 11.0)
     add_compile_options(-pedantic-errors)
   endif()
-  if(CMAKE_Fortran_COMPILER_VERSION VERSION_GREATER_EQUAL 8.0)
-    add_compile_options(-std=f2018)
-  else()
-    add_compile_options(-std=f2008ts)
-  endif()
+  add_compile_options(-std=f2018)
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
   add_compile_options(-warn declarations,general,usage,interfaces,unused)
   if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 18.0)
