--- a/fpm.toml
+++ b/fpm.toml
@@ -3,7 +3,7 @@ version = "0.0.1"
 license = "MIT"
 author = "stdlib contributors"
 maintainer = "https://github.com/fortran-lang/stdlib"
-copyright = "2019-2021 forlab contributors"
+copyright = "2019-2021 stdlib contributors"
 description = "Fortran Standard Library"
 categories = ["numerical"]
 keywords = ["numerical", "stdlib"]
