--- a/src/Makefile.fpm
+++ b/src/Makefile.fpm
@@ -19,7 +19,7 @@ clean:
 	cd $(FPMSRCDIR); $(RM) $(SRCGEN) $(SRCF90)
 
 # GEN F90 files to `fpm/` from FYPP files
-$(SRCGEN): %.f90: %.fypp
+$(SRCGEN): %.f90: %.fypp common.fypp
 	@mkdir -p fpm
 	fypp $(FYPPFLAGS) $< $(FPMSRCDIR)$@
 
