--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,9 +49,7 @@ check_fortran_source_runs("i=0; error stop i; end" f18errorstop SRC_EXT f90)
 check_fortran_source_compiles("real, allocatable :: array(:, :, :, :, :, :, :, :, :, :); end" f03rank SRC_EXT f90)
 check_fortran_source_runs("use, intrinsic :: iso_fortran_env, only : real128; real(real128) :: x; x = x+1; end" f03real128)
 
-if(DEFINED CMAKE_MAXIMUM_RANK)
-  set(CMAKE_MAXIMUM_RANK ${CMAKE_MAXIMUM_RANK})
-endif()
+option(CMAKE_MAXIMUM_RANK "Maximum array rank for generated procedures" 4)
 
 # --- find preprocessor
 find_program(FYPP fypp)
