add: 1. src/stdlib_strings_format_string.fypp 2. src/tests/string/test_strings_format_string.f90 3. stdlib_strings.fypp%format_string interface modify: 1. doc/spec/stdlib_strings.md%format_string(doc) 2. stdlib_strings.f90 -> stdlib_strings.fypp(rename) 3. src/Makefile.manual%format_string(make) 4. src/tests/string/Makefile.manual%format_string(make) 5. src/CMakelists.txt%format_string(cmake) 6. src/CMakelists.txt%format_string(cmake) note: make test passed. cmake test passed

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,8 @@ set(fppFiles
     stdlib_stats_distribution_PRNG.fypp
     stdlib_math.fypp
     stdlib_string_type.fypp
+    stdlib_strings_format_string.fypp
+    stdlib_strings.fypp
 )
 
 
@@ -47,7 +49,6 @@ set(SRC
     stdlib_error.f90
     stdlib_kinds.f90
     stdlib_logger.f90
-    stdlib_strings.f90
     stdlib_system.F90
     ${outFiles}
 )
