--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -25,13 +25,14 @@ SRCFYPP =\
         stdlib_stats_var.fypp \
         stdlib_math.fypp \
         stdlib_stats_distribution_PRNG.fypp \
-        stdlib_string_type.fypp
+        stdlib_string_type.fypp \
+        stdlib_strings.fypp \
+        stdlib_strings_format_string.fypp
 
 SRC = f18estop.f90 \
       stdlib_error.f90 \
       stdlib_kinds.f90 \
       stdlib_logger.f90 \
-      stdlib_strings.f90 \
       $(SRCGEN)
 
 LIB = libstdlib.a
@@ -129,5 +130,7 @@ stdlib_string_type.o: stdlib_ascii.o \
     stdlib_kinds.o
 stdlib_strings.o: stdlib_ascii.o \
     stdlib_string_type.o \
-	stdlib_optval.o
+	stdlib_optval.o \
+    stdlib_kinds.o
 stdlib_math.o: stdlib_kinds.o
+stdlib_strings_format_string.o: stdlib_strings.o
