--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -37,7 +37,7 @@ SRC = f18estop.f90 \
       stdlib_io.f90 \
       stdlib_kinds.f90 \
       stdlib_logger.f90 \
-      stdlib_quadrature_gauss.f90
+      stdlib_quadrature_gauss.f90 \
       $(SRCGEN)
 
 LIB = libstdlib.a
