--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -8,9 +8,11 @@ endmacro(ADDTEST)
 
 add_subdirectory(ascii)
 add_subdirectory(bitsets)
+add_subdirectory(hash)
 add_subdirectory(io)
 add_subdirectory(linalg)
 add_subdirectory(logger)
+add_subdirectory(map)
 add_subdirectory(optval)
 add_subdirectory(sorting)
 add_subdirectory(stats)
