--- a/src/tests/Makefile.manual
+++ b/src/tests/Makefile.manual
@@ -3,8 +3,10 @@
 all test clean:
 	$(MAKE) -f Makefile.manual --directory=ascii $@
 	$(MAKE) -f Makefile.manual --directory=bitsets $@
+	$(MAKE) -f Makefile.manual --directory=hash $@
 	$(MAKE) -f Makefile.manual --directory=io $@
 	$(MAKE) -f Makefile.manual --directory=logger $@
+	$(MAKE) -f Makefile.manual --directory=map $@
 	$(MAKE) -f Makefile.manual --directory=optval $@
 	$(MAKE) -f Makefile.manual --directory=sorting $@
 	$(MAKE) -f Makefile.manual --directory=quadrature $@
