--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -28,7 +28,7 @@ SRCFYPP =\
         stdlib_stats_distribution_PRNG.fypp \
         stdlib_string_type.fypp \
         stdlib_strings.fypp \
-        stdlib_string_format_string.fypp
+        stdlib_string_format_to_string.fypp
 
 SRC = f18estop.f90 \
       stdlib_error.f90 \
@@ -76,7 +76,8 @@ stdlib_specialfunctions_legendre.o: stdlib_kinds.o stdlib_specialfunctions.o
 stdlib_io.o: \
 	stdlib_error.o \
 	stdlib_optval.o \
-	stdlib_kinds.o
+	stdlib_kinds.o \
+    stdlib_ascii.o
 stdlib_linalg.o: \
 	stdlib_kinds.o
 stdlib_linalg_diag.o: \
@@ -143,5 +144,5 @@ stdlib_strings.o: stdlib_ascii.o \
 	stdlib_optval.o \
     stdlib_kinds.o
 stdlib_math.o: stdlib_kinds.o
-stdlib_string_format_string.o: stdlib_strings.o
+stdlib_string_format_to_string.o: stdlib_strings.o
 stdlib_linalg_outer_product.o: stdlib_linalg.o
