Use CMake `set` for CMAKE_MAXIMUM_RANK
... because using `option` will make it show up incorrectly as a checkbox in cmake-gui.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,9 @@ check_fortran_source_runs("i=0; error stop i; end" f18errorstop SRC_EXT f90)
 check_fortran_source_compiles("real, allocatable :: array(:, :, :, :, :, :, :, :, :, :); end" f03rank SRC_EXT f90)
 check_fortran_source_runs("use, intrinsic :: iso_fortran_env, only : real128; real(real128) :: x; x = x+1; end" f03real128)
 
-option(CMAKE_MAXIMUM_RANK "Maximum array rank for generated procedures" 4)
+if(NOT DEFINED CMAKE_MAXIMUM_RANK)
+  set(CMAKE_MAXIMUM_RANK 4 CACHE STRING "Maximum array rank for generated procedures")
+endif()
 
 # --- find preprocessor
 find_program(FYPP fypp)
