--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -144,12 +144,8 @@ stdlib_strings.o: stdlib_ascii.o \
 	stdlib_optval.o
 stdlib_math.o: stdlib_kinds.o
 stdlib_math_linspace.o: \
-	stdlib_math.o \
-	stdlib_kinds.o
+	stdlib_math.o
 stdlib_math_logspace.o: \
 	stdlib_math.o \
 	stdlib_math_linspace.o \
-	stdlib_kinds.o \
-	stdlib_optval.o
-
 stdlib_linalg_outer_product.o: stdlib_linalg.o
