--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -78,7 +78,8 @@ stdlib_io.o: \
 	stdlib_error.o \
 	stdlib_optval.o \
 	stdlib_kinds.o \
-    stdlib_ascii.o
+    stdlib_ascii.o \
+    stdlib_string_type.o
 stdlib_linalg.o: \
 	stdlib_kinds.o
 stdlib_linalg_diag.o: \
@@ -150,4 +151,5 @@ stdlib_linalg_outer_product.o: stdlib_linalg.o
 stdlib_io_disp.o: stdlib_error.o \
     stdlib_strings.o \
     stdlib_string_type.o \
-    stdlib_io.o
+    stdlib_io.o \
+    stdlib_ascii.o
