--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 env:
   CTEST_TIME_TIMEOUT: "5"  # some failures hang forever
+  CMAKE_GENERATOR: Ninja
 
 jobs:
   msys2-build:
@@ -57,8 +58,7 @@ jobs:
       run: pip install fypp
 
     - run: >-
-        cmake -G Ninja
-        -DCMAKE_SH="CMAKE_SH-NOTFOUND"
+        cmake
         -Wdev
         -B build
         -DCMAKE_BUILD_TYPE=Debug
@@ -78,8 +78,7 @@ jobs:
       if: failure()
 
     - name: CTest
-      run: ctest --output-on-failure --parallel -V -LE quadruple_precision
-      working-directory: build
+      run: ctest --test-dir build --output-on-failure --parallel -V -LE quadruple_precision
 
     - uses: actions/upload-artifact@v1
       if: failure()
