--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 macro(ADDTEST name)
     add_executable(test_${name} test_${name}.f90)
-    target_link_libraries(test_${name} ${PROJECT_NAME})
+    target_link_libraries(test_${name} PRIVATE ${PROJECT_NAME})
     add_test(NAME ${name}
              COMMAND $<TARGET_FILE:test_${name}> ${CMAKE_CURRENT_BINARY_DIR}
              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
@@ -19,7 +19,14 @@ add_subdirectory(system)
 add_subdirectory(quadrature)
 add_subdirectory(math)
 
-ADDTEST(always_skip)
-set_tests_properties(always_skip PROPERTIES SKIP_RETURN_CODE 77)
-ADDTEST(always_fail)
-set_tests_properties(always_fail PROPERTIES WILL_FAIL true)
+add_executable(test_error_handling test_error_driver.f90)
+
+add_executable(test_always_77 test_always_77.f90)
+target_link_libraries(test_always_77 PRIVATE ${PROJECT_NAME})
+add_test(NAME test_error_77
+    COMMAND $<TARGET_FILE:test_error_handling> $<TARGET_FILE:test_always_77> 77)
+
+add_executable(test_always_1 test_always_fail.f90)
+target_link_libraries(test_always_1 PRIVATE ${PROJECT_NAME})
+add_test(NAME test_error_1
+    COMMAND $<TARGET_FILE:test_error_handling> $<TARGET_FILE:test_always_1> 1)
