--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -29,6 +29,7 @@ SRCFYPP =\
 		stdlib_math_linspace.fypp \
 		stdlib_math_logspace.fypp \
         stdlib_stats_distribution_PRNG.fypp \
+	stdlib_stats_distribution_uniform.fypp \
         stdlib_string_type.fypp
 
 SRC = f18estop.f90 \
@@ -144,6 +145,10 @@ stdlib_stats_var.o: \
 stdlib_stats_distribution_PRNG.o: \
         stdlib_kinds.o \
 	stdlib_error.o
+stdlib_stats_distribution_uniform.o: \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_PRNG.o
 stdlib_string_type.o: stdlib_ascii.o \
     stdlib_kinds.o
 stdlib_strings.o: stdlib_ascii.o \
