--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(string)
 add_subdirectory(system)
 add_subdirectory(quadrature)
 add_subdirectory(math)
+add_subdirectory(stringlist)
 
 ADDTEST(always_skip)
 set_tests_properties(always_skip PROPERTIES SKIP_RETURN_CODE 77)
