--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -40,7 +40,7 @@ SRC = f18estop.f90 \
       stdlib_logger.f90 \
       stdlib_quadrature_gauss.f90 \
       stdlib_strings.f90 \
-	  stdlib_stringlist.f90
+      stdlib_stringlist.f90 \
       $(SRCGEN)
 
 LIB = libstdlib.a
