--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -6,7 +6,7 @@ SRCFYPP =\
         stdlib_io.fypp \
         stdlib_linalg.fypp \
         stdlib_linalg_diag.fypp \
-        stdlib_linalg_exs.fypp \
+        stdlib_linalg_expand.fypp \
         stdlib_linalg_outer_product.fypp \
         stdlib_optval.fypp \
         stdlib_quadrature.fypp \
@@ -87,10 +87,10 @@ stdlib_linalg.o: \
 stdlib_linalg_diag.o: \
 	stdlib_linalg.o \
 	stdlib_kinds.o
-stdlib_linalg_exs.o: \
+stdlib_linalg_expand.o: \
 	stdlib_linalg.o \
 	stdlib_kinds.o \
-    stdlib_string_type.o
+	stdlib_string_type.o
 stdlib_logger.o: stdlib_ascii.o stdlib_optval.o
 stdlib_optval.o: stdlib_kinds.o
 stdlib_quadrature.o: stdlib_kinds.o
