--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -149,7 +149,8 @@ stdlib_string_type.o: stdlib_ascii.o \
 stdlib_strings.o: stdlib_ascii.o \
     stdlib_string_type.o \
 	stdlib_optval.o
-stdlib_math.o: stdlib_kinds.o
+stdlib_math.o: stdlib_kinds.o \
+    stdlib_optval.o
 stdlib_math_linspace.o: \
 	stdlib_math.o
 stdlib_math_logspace.o: \
