--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ set(fppFiles
     stdlib_math_logspace.fypp
     stdlib_string_type.fypp
     stdlib_string_type_constructor.fypp
-    stdlib_string_to_string.fypp
+    stdlib_strings_to_string.fypp
     stdlib_strings.fypp
 )
 
