--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -32,7 +32,7 @@ SRCFYPP =\
         stdlib_string_type.fypp \
         stdlib_string_type_constructor.fypp \
         stdlib_strings.fypp \
-        stdlib_string_to_string.fypp
+        stdlib_strings_to_string.fypp
 
 SRC = f18estop.f90 \
       stdlib_error.f90 \
@@ -150,14 +150,14 @@ stdlib_stats_distribution_PRNG.o: \
 stdlib_string_type.o: stdlib_ascii.o \
     stdlib_kinds.o
 stdlib_string_type_constructor.o: stdlib_string_type.o \
-    stdlib_string_to_string.o \
+    stdlib_strings_to_string.o \
     stdlib_strings.o
 stdlib_strings.o: stdlib_ascii.o \
     stdlib_string_type.o \
 	stdlib_optval.o \
     stdlib_kinds.o
 stdlib_math.o: stdlib_kinds.o
-stdlib_string_to_string.o: stdlib_strings.o
+stdlib_strings_to_string.o: stdlib_strings.o
 stdlib_math_linspace.o: \
 	stdlib_math.o
 stdlib_math_logspace.o: \
