--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -41,6 +41,8 @@ SRC = f18estop.f90 \
       stdlib_logger.f90 \
       stdlib_quadrature_gauss.f90 \
       stdlib_strings.f90 \
+			stdlib_child_list.f90 \
+			stdlib_linked_list.f90 \
       $(SRCGEN)
 
 LIB = libstdlib.a
@@ -159,3 +161,4 @@ stdlib_math_logspace.o: \
 stdlib_math_arange.o: \
     stdlib_math.o
 stdlib_linalg_outer_product.o: stdlib_linalg.o
+stdlib_linked_list.o: stdlib_child_list.o
