renamed stringlist to stringlist_type

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,7 +56,7 @@ set(SRC
     stdlib_specialfunctions.f90
     stdlib_specialfunctions_legendre.f90
     stdlib_quadrature_gauss.f90
-    stdlib_stringlist.f90
+    stdlib_stringlist_type.f90
     ${outFiles}
 )
 
