--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,6 +1,18 @@
+fypp_f90("${fyppFlags};-I${CMAKE_CURRENT_SOURCE_DIR}/.." "stdlib_test.fypp" outFiles)
+add_library("${PROJECT_NAME}-testing" "${outFiles}")
+target_link_libraries("${PROJECT_NAME}-testing" PUBLIC "${PROJECT_NAME}")
+set_target_properties(
+  "${PROJECT_NAME}-testing" PROPERTIES
+  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
+target_include_directories(
+  "${PROJECT_NAME}-testing" PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+)
+
 macro(ADDTEST name)
     add_executable(test_${name} test_${name}.f90)
-    target_link_libraries(test_${name} ${PROJECT_NAME})
+    target_link_libraries(test_${name} "${PROJECT_NAME}-testing")
     add_test(NAME ${name}
              COMMAND $<TARGET_FILE:test_${name}> ${CMAKE_CURRENT_BINARY_DIR}
              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
@@ -16,6 +28,7 @@ add_subdirectory(sorting)
 add_subdirectory(stats)
 add_subdirectory(string)
 add_subdirectory(system)
+add_subdirectory(test)
 add_subdirectory(quadrature)
 add_subdirectory(math)
 
