modify index.md, CMakeList.txt and Makefile.manual

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -30,6 +30,7 @@ SRCFYPP = \
 	stdlib_math_linspace.fypp \
 	stdlib_math_logspace.fypp \
         stdlib_stats_distribution_PRNG.fypp \
+        stdlib_stats_distribution_uniform.fypp \
         stdlib_string_type.fypp \
         stdlib_string_type_constructor.fypp \
         stdlib_strings.fypp \
@@ -146,6 +147,10 @@ stdlib_stats_var.o: \
 stdlib_stats_distribution_PRNG.o: \
     stdlib_kinds.o \
     stdlib_error.o
+stdlib_stats_distribution_uniform.o: \
+    stdlib_kinds.o \
+    stdlib_error.o \
+    stdlib_stats_distribution_PRNG.o
 stdlib_string_type.o: stdlib_ascii.o \
     stdlib_kinds.o
 stdlib_string_type_constructor.o: stdlib_string_type.o \
