Meger `to_string` to `disp`, update `disp` routines.

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -79,13 +79,11 @@ stdlib_bitsets_large.o: stdlib_bitsets.o
 stdlib_error.o: stdlib_optval.o
 stdlib_specialfunctions.o: stdlib_kinds.o
 stdlib_specialfunctions_legendre.o: stdlib_kinds.o stdlib_specialfunctions.o
-stdlib_io.o: 
-    stdlib_ascii.o \
+stdlib_io.o: \
     stdlib_error.o \
     stdlib_optval.o \
     stdlib_kinds.o \
     stdlib_ascii.o \
-    stdlib_error.o \
     stdlib_string_type.o
 stdlib_linalg.o: \
     stdlib_kinds.o
@@ -168,8 +166,7 @@ stdlib_math_logspace.o: \
 stdlib_math_arange.o: \
     stdlib_math.o
 stdlib_linalg_outer_product.o: stdlib_linalg.o
-stdlib_io_disp.o: stdlib_error.o \
+stdlib_io_disp.o: \
     stdlib_strings.o \
     stdlib_string_type.o \
-    stdlib_io.o \
-    stdlib_ascii.o
+    stdlib_io.o
