--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -29,6 +29,7 @@ SRCFYPP =\
         stdlib_math.fypp \
 		stdlib_math_linspace.fypp \
 		stdlib_math_logspace.fypp \
+        stdlib_math_is_close.fypp \
         stdlib_stats_distribution_PRNG.fypp \
         stdlib_string_type.fypp
 
@@ -159,3 +160,5 @@ stdlib_math_logspace.o: \
 stdlib_math_arange.o: \
     stdlib_math.o
 stdlib_linalg_outer_product.o: stdlib_linalg.o
+stdlib_math_is_close.o: \
+    stdlib_math.o
