change name to match discussion

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ set(fppFiles
     stdlib_linalg_diag.fypp
     stdlib_linalg_outer_product.fypp
     stdlib_optval.fypp
+    stdlib_selection.fypp
     stdlib_sorting.fypp
     stdlib_sorting_ord_sort.fypp
     stdlib_sorting_sort.fypp
