--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(io)
 add_subdirectory(linalg)
 add_subdirectory(logger)
 add_subdirectory(optval)
+add_subdirectory(selection)
 add_subdirectory(sorting)
 add_subdirectory(stats)
 add_subdirectory(string)
