--- a/src/tests/Makefile.manual
+++ b/src/tests/Makefile.manual
@@ -6,6 +6,7 @@ all test clean:
 	$(MAKE) -f Makefile.manual --directory=io $@
 	$(MAKE) -f Makefile.manual --directory=logger $@
 	$(MAKE) -f Makefile.manual --directory=optval $@
+	$(MAKE) -f Makefile.manual --directory=selection $@
 	$(MAKE) -f Makefile.manual --directory=sorting $@
 	$(MAKE) -f Makefile.manual --directory=quadrature $@
 	$(MAKE) -f Makefile.manual --directory=stats $@
