--- a/src/tests/io/Makefile.manual
+++ b/src/tests/io/Makefile.manual
@@ -5,7 +5,7 @@ PROGS_SRC = test_loadtxt.f90 \
             test_parse_mode.f90 \
             test_open.f90
 
-CLEAN_FILES = tmp.dat tmp_qp.dat io_open.dat io_open.stream
+CLEAN_FILES = tmp*.dat array*_new.dat io_open.dat io_open.stream
 
 
 include ../Makefile.manual.test.mk
