Add stdlib_error dependency to stdlib_linalg for GNU make

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -83,6 +83,7 @@ stdlib_io.o: \
 	stdlib_kinds.o
 stdlib_linalg.o: \
 	stdlib_kinds.o
+	stdlib_error.o
 stdlib_linalg_diag.o: \
 	stdlib_linalg.o \
 	stdlib_kinds.o
