--- a/src/tests/math/Makefile.manual
+++ b/src/tests/math/Makefile.manual
@@ -1,6 +1,7 @@
 PROGS_SRC = test_stdlib_math.f90 test_linspace.f90 test_logspace.f90 \
     test_math_arange.f90 \
-    test_math_is_close.f90
+    test_math_is_close.f90 \
+    test_math_all_close.f90
 
 
 include ../Makefile.manual.test.mk
