--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -12,6 +12,7 @@ SRCFYPP = \
         stdlib_quadrature.fypp \
         stdlib_quadrature_trapz.fypp \
         stdlib_quadrature_simps.fypp \
+        stdlib_random.fypp \
         stdlib_sorting.fypp \
         stdlib_sorting_ord_sort.fypp \
         stdlib_sorting_sort.fypp \
@@ -29,7 +30,6 @@ SRCFYPP = \
         stdlib_math.fypp \
 	stdlib_math_linspace.fypp \
 	stdlib_math_logspace.fypp \
-        stdlib_stats_distribution_PRNG.fypp \
         stdlib_string_type.fypp \
         stdlib_string_type_constructor.fypp \
         stdlib_strings.fypp \
@@ -145,7 +145,7 @@ stdlib_stats_var.o: \
     stdlib_optval.o \
     stdlib_kinds.o \
     stdlib_stats.o
-stdlib_stats_distribution_PRNG.o: \
+stdlib_random.o: \
     stdlib_kinds.o \
     stdlib_error.o
 stdlib_string_type.o: stdlib_ascii.o \
