--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,7 @@ set(fppFiles
     stdlib_stats_moment_all.fypp
     stdlib_stats_moment_mask.fypp
     stdlib_stats_moment_scalar.fypp
+    stdlib_stats_distribution_uniform.fypp
     stdlib_stats_var.fypp
     stdlib_quadrature.fypp
     stdlib_quadrature_trapz.fypp
