--- a/src/tests/stats/Makefile.manual
+++ b/src/tests/stats/Makefile.manual
@@ -1,6 +1,7 @@
 SRCFYPP =\
         test_median.fypp \
-	    test_distribution_uniform.fypp
+	    test_distribution_uniform.fypp \
+	    test_distribution_normal.fypp
 
 SRCGEN = $(SRCFYPP:.fypp=.f90)
 
