Rename test_distribution_PRNG -> test_random

--- a/src/tests/stats/CMakeLists.txt
+++ b/src/tests/stats/CMakeLists.txt
@@ -27,7 +27,7 @@ ADDTEST(moment)
 ADDTEST(rawmoment)
 ADDTEST(var)
 ADDTEST(varn)
-ADDTEST(distribution_PRNG)
+ADDTEST(random)
 ADDTEST(distribution_uniform)
 
 if(DEFINED CMAKE_MAXIMUM_RANK)
