--- a/src/tests/stats/Makefile.manual
+++ b/src/tests/stats/Makefile.manual
@@ -8,7 +8,6 @@ SRCGEN = $(SRCFYPP:.fypp=.f90)
 $(SRCGEN): %.f90: %.fypp common.fypp
 	fypp $(FYPPFLAGS) $< $@
 
-PROGS_SRC = $(SRCGEN) test_mean.f90 test_moment.f90 test_var.f90 \
-            test_distribution_PRNG.f90
+PROGS_SRC = $(SRCGEN) test_mean.f90 test_moment.f90 test_var.f90 test_random.f90
 
 include ../Makefile.manual.test.mk
