Make support for quadruple precision optional
- use checks in CMake to automatically determine whether quadruple precision is available
- default to values in kind we run from the manual makefile don't want to run checks
- skip all tests explicitly referencing the quadruple precision kind parameter
- add check for extended double precision (available with GCC)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,12 @@ else()
   set(fyppFlags "-DVERSION90")
 endif()
 
+list(
+  APPEND fyppFlags
+  "-DWITH_QP=$<BOOL:${WITH_QP}>"
+  "-DWITH_XDP=$<BOOL:${WITH_XDP}>"
+)
+
 fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
 
 set(SRC
