--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -10,6 +10,11 @@ macro(ADDTEST name)
              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 endmacro(ADDTEST)
 
+list(
+  APPEND fyppFlags
+  "-I${PROJECT_SOURCE_DIR}/src"
+)
+
 add_subdirectory(ascii)
 add_subdirectory(bitsets)
 add_subdirectory(io)
