--- a/src/tests/io/CMakeLists.txt
+++ b/src/tests/io/CMakeLists.txt
@@ -1,3 +1,10 @@
+set(
+  fppFiles
+  "test_loadtxt_qp.fypp"
+  "test_savetxt_qp.fypp"
+)
+fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
+
 ADDTEST(loadtxt)
 ADDTEST(savetxt)
 
