--- a/src/tests/optval/CMakeLists.txt
+++ b/src/tests/optval/CMakeLists.txt
@@ -1,3 +1,9 @@
+set(
+  fppFiles
+  "test_optval.fypp"
+)
+fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
+
 ADDTEST(optval)
 # prevent false positive (https://gcc.gnu.org/bugzilla/show_bug.cgi?id=95446)
 if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
