--- a/ci/fpm.toml
+++ b/ci/fpm.toml
@@ -7,3 +7,4 @@ copyright = "2019-2021 stdlib contributors"
 
 [dev-dependencies]
 test-drive.git = "https://github.com/fortran-lang/test-drive"
+test-drive.tag = "v0.4.0"
