--- a/src/tests/Makefile.manual
+++ b/src/tests/Makefile.manual
@@ -9,7 +9,7 @@ FETCH = curl -L
 all test:: $(LIB)
 
 testdrive.F90:
-	$(FETCH) https://github.com/fortran-lang/test-drive/raw/main/src/testdrive.F90 > $@
+	$(FETCH) https://github.com/fortran-lang/test-drive/raw/v0.4.0/src/testdrive.F90 > $@
 
 all test clean::
 	$(MAKE) -f Makefile.manual --directory=ascii $@
