--- a/src/tests/selection/Makefile.manual
+++ b/src/tests/selection/Makefile.manual
@@ -3,8 +3,8 @@ SRCFYPP =\
 
 SRCGEN = $(SRCFYPP:.fypp=.f90)
 
-$(SRCGEN): %.f90: %.fypp common.fypp
-	fypp $(FYPPFLAGS) $< $@
+$(SRCGEN): %.f90: %.fypp ../../common.fypp
+	fypp -I../.. $(FYPPFLAGS) $< $@
 
 PROGS_SRC = $(SRCGEN)
 
