Modified to have no-range-checks
Added the gcc compiler flag no-range-checks

[ticket: X]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,11 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
   endif()
   add_compile_options(-fimplicit-none)
   add_compile_options(-ffree-line-length-132)
+  add_compile_options(-fno-range-check)
   add_compile_options(-Wall)
   add_compile_options(-Wextra)
   add_compile_options(-Wimplicit-procedure)
+  add_compile_options(-Wconversion-extra)
   # -pedantic-errors triggers a false positive for optional arguments of elemental functions,
   # see test_optval and https://gcc.gnu.org/bugzilla/show_bug.cgi?id=95446
   if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 11.0)
